crates/tokmd-fun/tests/snapshots/snapshot_w70__w70_midi_chord.snap
---
source: crates/tokmd-fun/tests/snapshot_w70.rs
expression: "midi_hex(&notes, 100)"
---
4d 54 68 64 00 00 00 06 00 00 00 01 01 e0 4d 54 72 6b 00 00 00 20 00 ff 51 03 09 27 c0 00 90 3c 50 00 40 50 00 43 50 87 40 80 3c 00 00 40 00 00 43 00 00 ff 2f 00
