crates/tokmd-fun/tests/snapshots/snapshot_w70__w70_midi_empty_notes.snap
---
source: crates/tokmd-fun/tests/snapshot_w70.rs
expression: "midi_hex(&[], 120)"
---
4d 54 68 64 00 00 00 06 00 00 00 01 01 e0 4d 54 72 6b 00 00 00 0b 00 ff 51 03 07 a1 20 00 ff 2f 00
