crates/tokmd-fun/tests/snapshots/snapshot_w70__w70_midi_single_note.snap
---
source: crates/tokmd-fun/tests/snapshot_w70.rs
expression: "midi_hex(&notes, 120)"
---
4d 54 68 64 00 00 00 06 00 00 00 01 01 e0 4d 54 72 6b 00 00 00 14 00 ff 51 03 07 a1 20 00 90 3c 64 83 60 80 3c 00 00 ff 2f 00
