crates/tokmd-fun/tests/snapshots/snapshot_w70__w70_obj_empty_city.snap
---
source: crates/tokmd-fun/tests/snapshot_w70.rs
expression: "render_obj(&[])"
---
# tokmd code city
