crates/tokmd-fun/tests/snapshots/snapshot_w70__w70_obj_three_buildings_grid.snap
---
source: crates/tokmd-fun/tests/snapshot_w70.rs
expression: render_obj(&buildings)
---
# tokmd code city
o Rust
v 0 0 0
v 5 0 0
v 5 5 0
v 0 5 0
v 0 0 20
v 5 0 20
v 5 5 20
v 0 5 20
f 1 2 3 4
f 5 6 7 8
f 1 2 6 5
f 2 3 7 6
f 3 4 8 7
f 4 1 5 8
o Python
v 6 0 0
v 9 0 0
v 9 3 0
v 6 3 0
v 6 0 8
v 9 0 8
v 9 3 8
v 6 3 8
f 9 10 11 12
f 13 14 15 16
f 9 10 14 13
f 10 11 15 14
f 11 12 16 15
f 12 9 13 16
o TOML
v 10 0 0
v 12 0 0
v 12 2 0
v 10 2 0
v 10 0 1.5
v 12 0 1.5
v 12 2 1.5
v 10 2 1.5
f 17 18 19 20
f 21 22 23 24
f 17 18 22 21
f 18 19 23 22
f 19 20 24 23
f 20 17 21 24
